# DupeDetect

./: .gitignore  Blake3Hash.cpp  Blake3Hash.h  CMakeLists.txt  DepthLimitedDuplicateFinder.cpp  DepthLimitedDuplicateFinder.h  DuplicateFindUtils.cpp  DuplicateFindUtils.h  DuplicateFinder.h  Options.cpp  Options.h  ParallelWrapper.h  README.md  RecursiveDuplicateFinder.cpp  RecursiveDuplicateFinder.h  Size.cpp  Size.h  StringUtils.cpp  StringUtils.h  main.cpp
BLAKE3/: CMakeLists.txt  README.md  blake3.c  blake3.h  blake3_avx2.c  blake3_avx2_x86-64_unix.S  blake3_avx512.c  blake3_avx512_x86-64_unix.S  blake3_dispatch.c  blake3_impl.h  blake3_neon.c  blake3_portable.c  blake3_sse2.c  blake3_sse2_x86-64_unix.S  blake3_sse41.c  blake3_sse41_x86-64_unix.S
